Change size canevas to 400

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -16,18 +16,22 @@
     }
    ],
    "source": [
-    "from mobilechelonian import Turtle\n",
-    "t = Turtle()\n",
-    "t.speed(5)\n",
+    "from turtleIutv import *\n",
+    "drawing()\n",
+    "speed(5)\n",
     "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
-    "t.penup(); t.left(90); t.forward(200);t.right(90);t.pendown()\n",
-    "for i in range (0,18):\n",
-    "    t.pencolor(colours[i%7])\n",
-    "    t.right(20)\n",
-    "    t.forward(50)\n",
-    "\n",
-    "t.right(180)\n",
-    "t.home()"
+    "up() \n",
+    "left(90)\n",
+    "forward(200)\n",
+    "right(90)\n",
+    "down()\n",
+    "i = 0\n",
+    "while i < 18:\n",
+    "    setColor(colours[i%7])\n",
+    "    right(20)\n",
+    "    forward(50)\n",
+    "    i += 1\n",
+    "goto(200, 200)"
    ]
   },
   {
