--- a/try.ipynb
+++ b/try.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# Here we'll import our Turtle object. This lets us create specific turtles.\n",
-    "from mobilechelonian import Turtle"
+    "from turtleIutv import *\n"
    ]
   },
   {
@@ -36,7 +36,7 @@
    ],
    "source": [
     "# We'll create a new turtle like this. It should open a window with our turtle inside.\n",
-    "t = Turtle()"
+    "drawing()"
    ]
   },
   {
@@ -57,8 +57,8 @@
    },
    "outputs": [],
    "source": [
-    "# t.speed(N) will control the speed of the turtle when it moves (N from 1 - 10)\n",
-    "t.speed(1)"
+    "# speed(N) will control the speed of the turtle when it moves (N from 1 - 10)\n",
+    "speed(8)"
    ]
   },
   {
@@ -69,8 +69,8 @@
    },
    "outputs": [],
    "source": [
-    "# t.penup() will \"raise the pen\" meaning the turtle won't draw lines anymore\n",
-    "t.penup()"
+    "# up() will \"raise the pen\" meaning the turtle won't draw lines anymore\n",
+    "up()"
    ]
   },
   {
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "# And this will \"lower the pen\" so the turtle draws when it moves\n",
-    "t.pendown()"
+    "down()"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "outputs": [],
    "source": [
     "# This changes the color of the turtle's path, if the pen is down\n",
-    "t.pencolor(\"red\")  # try \"blue\", \"yellow\", \"brown\", \"black\", \"purple\", \"green\""
+    "setColor(\"red\")  # try \"blue\", \"yellow\", \"brown\", \"black\", \"purple\", \"green\""
    ]
   },
   {
@@ -106,7 +106,7 @@
    "outputs": [],
    "source": [
     "# This will rotate the turtle counter-clockwise\n",
-    "t.left(90)"
+    "left(90)"
    ]
   },
   {
@@ -118,7 +118,7 @@
    "outputs": [],
    "source": [
     "# And this rotates the turtle clockwise\n",
-    "t.right(90)"
+    "right(90)"
    ]
   },
   {
@@ -130,53 +130,17 @@
    "outputs": [],
    "source": [
     "# This makes the turtle move forward\n",
-    "t.forward(100)"
+    "forward(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# Finally, this will bring the turtle back home (to the center)\n",
-    "t.home()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Try drawing different shapes.\n",
-    "\n",
-    "# Keeping track of the turtle's path\n",
-    "You can see the history of the turtle's position here"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'b': 0, 'lc': 'black', 'p': 1, 's': 1, 'x': 200, 'y': 200},\n",
-       " {'b': -90, 'lc': 'red', 'p': 1, 's': 1, 'x': 200, 'y': 200},\n",
-       " {'b': 90, 'lc': 'red', 'p': 1, 's': 1, 'x': 200, 'y': 200},\n",
-       " {'b': 0, 'lc': 'red', 'p': 1, 's': 1, 'x': 300.0, 'y': 200.0},\n",
-       " {'b': 0, 'lc': 'red', 'p': 1, 's': 1, 'x': 200, 'y': 200}]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "t.points"
+    "# This makes the turtle move backward\n",
+    "backward(50)"
    ]
   }
  ],
