Documation and wiki

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -3,9 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -17,32 +15,30 @@
    ],
    "source": [
     "from turtleIutv import *\n",
-    "drawing()\n",
+    "drawing(400,500,\"d\",False)\n",
     "speed(5)\n",
     "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
-    "up() \n",
+    "up()\n",
     "left(90)\n",
-    "forward(200)\n",
+    "forward(250)\n",
     "right(90)\n",
     "down()\n",
     "i = 0\n",
     "while i < 18:\n",
     "    setColor(colours[i%7])\n",
+    "    setSize(i%7+1)\n",
+    "    speed(i%10+1)\n",
     "    right(20)\n",
-    "    forward(50)\n",
+    "    forward(100)\n",
     "    i += 1\n",
-    "goto(200, 200)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "t.circle(60)"
+    "right(90)\n",
+    "\n",
+    "up()\n",
+    "home()\n",
+    "down()\n",
+    "goto(150, 200)\n",
+    "backward(300)\n",
+    "home()"
    ]
   }
  ],
@@ -62,9 +58,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
