--- a/try.ipynb
+++ b/try.ipynb
@@ -36,7 +36,18 @@
    ],
    "source": [
     "# We'll create a new turtle like this. It should open a window with our turtle inside.\n",
-    "drawing()"
+    "# Before using any turtle function in a cell, you must call this function after importing the turtleIutv module.\n",
+    "drawing(turtle = False, width = 500, limit = 1000,color = \"white\")\n",
+    "\n",
+    "# Here are other example calls:\n",
+    "# 1) without parameter\n",
+    "drawing()\n",
+    "# 2) without parameter named parameter\n",
+    "drawing(400,500,\"#F23030\",False)\n",
+    "# 3) Only 2 parameters\n",
+    "drawing(400,500)\n",
+    "# 4) Changing the order of parameters\n",
+    "drawing(limit = 1000, turtle = False, width = 500)\n"
    ]
   },
   {
@@ -99,6 +110,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Adjusts the thickness of the pen line with the new size value passed in parameter.\n",
+    "setSize(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {
     "collapsed": true
@@ -142,6 +163,90 @@
     "# This makes the turtle move backward\n",
     "backward(50)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Moves the turtle to a position specified by the x and y coordinates. If the turtle is displayed, it first rotates and heads to its end point before moving\n",
+    "goto(0,0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Move the turtle to the center of the marker.\n",
+    "home()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Draw a semicircle of radius 100.\n",
+    "circle(100, 180)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To draw a figure colored in red and the line in black.\n",
+    "begin_fill(\"red\",\"black\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Stop the process of coloring a figure.\n",
+    "end_fil()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Complete usage example\n",
+    "from turtleIutv import *\n",
+    "drawing(400,500,\"d\",False)\n",
+    "speed(5)\n",
+    "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
+    "up()\n",
+    "left(90)\n",
+    "forward(250)\n",
+    "right(90)\n",
+    "down()\n",
+    "i = 0\n",
+    "while i < 18:\n",
+    "    setColor(colours[i%7])\n",
+    "    setSize(i%7+1)\n",
+    "    speed(i%10+1)\n",
+    "    right(20)\n",
+    "    forward(100)\n",
+    "    i += 1\n",
+    "right(90)\n",
+    "\n",
+    "up()\n",
+    "home()\n",
+    "down()\n",
+    "goto(150, 200)\n",
+    "backward(300)\n",
+    "home()"
+   ]
   }
  ],
  "metadata": {
@@ -160,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
