Change Readme and notebook examples

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -15,30 +15,26 @@
    ],
    "source": [
     "from turtleIutv import *\n",
-    "drawing(400,500,\"d\",False)\n",
+    "drawing(width = 500, limit = 1000, color = \"#D2D1CF\", turtle =True)\n",
     "speed(5)\n",
     "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
     "up()\n",
     "left(90)\n",
-    "forward(250)\n",
+    "forward(200)\n",
     "right(90)\n",
     "down()\n",
     "i = 0\n",
-    "while i < 18:\n",
+    "while i < 28:\n",
     "    setColor(colours[i%7])\n",
-    "    setSize(i%7+1)\n",
-    "    speed(i%10+1)\n",
-    "    right(20)\n",
-    "    forward(100)\n",
+    "    setSize(i%7)\n",
+    "    speed(i%10)\n",
+    "    right(13)\n",
+    "    forward(50)\n",
     "    i += 1\n",
-    "right(90)\n",
-    "\n",
-    "up()\n",
     "home()\n",
-    "down()\n",
-    "goto(150, 200)\n",
-    "backward(300)\n",
-    "home()"
+    "begin_fill(\"red\",\"yellow\")\n",
+    "circle(100)\n",
+    "end_fill()"
    ]
   }
  ],
