--- a/try.ipynb
+++ b/try.ipynb
@@ -210,8 +210,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Stop the process of coloring a figure.\n",
-    "end_fil()"
+    "# Stop the process of coloring a figure.\r\n",
+    "end_fill()"
    ]
   },
   {
@@ -222,26 +222,30 @@
    "source": [
     "# Complete usage example\n",
     "from turtleIutv import *\n",
-    "drawing(width = 500, limit = 1000, color = \"#D2D1CF\", turtle =True)\n",
+    "drawing(400,500,\"d\",False)\n",
     "speed(5)\n",
     "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
     "up()\n",
     "left(90)\n",
-    "forward(200)\n",
+    "forward(250)\n",
     "right(90)\n",
     "down()\n",
     "i = 0\n",
-    "while i < 28:\n",
+    "while i < 18:\n",
     "    setColor(colours[i%7])\n",
-    "    setSize(i%7)\n",
-    "    speed(i%10)\n",
-    "    right(13)\n",
-    "    forward(50)\n",
+    "    setSize(i%7+1)\n",
+    "    speed(i%10+1)\n",
+    "    right(20)\n",
+    "    forward(100)\n",
     "    i += 1\n",
+    "right(90)\n",
+    "\n",
+    "up()\n",
     "home()\n",
-    "begin_fill(\"red\",\"yellow\")\n",
-    "circle(100)\n",
-    "end_fill()"
+    "down()\n",
+    "goto(150, 200)\n",
+    "backward(300)\n",
+    "home()"
    ]
   }
  ],
