try.ipynb notebook example

--- a/try.ipynb
+++ b/try.ipynb
@@ -220,32 +220,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Complete usage example\n",
-    "from turtleIutv import *\n",
-    "drawing(400,500,\"d\",False)\n",
-    "speed(5)\n",
-    "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\n",
-    "up()\n",
-    "left(90)\n",
-    "forward(250)\n",
-    "right(90)\n",
-    "down()\n",
-    "i = 0\n",
-    "while i < 18:\n",
-    "    setColor(colours[i%7])\n",
-    "    setSize(i%7+1)\n",
-    "    speed(i%10+1)\n",
-    "    right(20)\n",
-    "    forward(100)\n",
-    "    i += 1\n",
-    "right(90)\n",
-    "\n",
-    "up()\n",
-    "home()\n",
-    "down()\n",
-    "goto(150, 200)\n",
-    "backward(300)\n",
-    "home()"
+    "# Complete usage example\r\n",
+    "from turtleIutv import *\r\n",
+    "drawing(width = 500, limit = 1000, color = \"#D2D1CF\", turtle =True)\r\n",
+    "speed(5)\r\n",
+    "colours=[\"red\",\"blue\",\"yellow\",\"brown\",\"black\",\"purple\",\"green\"]\r\n",
+    "up()\r\n",
+    "left(90)\r\n",
+    "forward(200)\r\n",
+    "right(90)\r\n",
+    "down()\r\n",
+    "i = 0\r\n",
+    "while i < 28:\r\n",
+    "    setColor(colours[i%7])\r\n",
+    "    setSize(i%7)\r\n",
+    "    speed(i%10)\r\n",
+    "    right(13)\r\n",
+    "    forward(50)\r\n",
+    "    i += 1\r\n",
+    "home()\r\n",
+    "begin_fill(\"red\",\"yellow\")\r\n",
+    "circle(100)\r\n",
+    "end_fill()"
    ]
   }
  ],
